# vault-lang

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demo/: demo.vlt  demo.vlt-conf
examples/: prelude.vlt  test.vlt
src/: eval.cpp  eval.hpp  gc.cpp  gc.hpp  main.cpp  object.cpp  object.hpp  object_type.hpp  prelude.cpp  prelude.hpp  reader.cpp  reader.hpp  vault.cpp  vault.hpp
